--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,18 +1,21 @@
 # main links
 main:
-  - title: "Theme Documentation"
-    url: https://perstarke-webdev.de/oneflow-jekyll-theme
-    blank: true
-    description: "The documentation for this theme, on https://perstarke-webdev.de"
-  - title: "Section 1"
+  # - title: "Theme Documentation"
+  #   url: https://perstarke-webdev.de/oneflow-jekyll-theme
+  #   blank: true
+  #   description: "The documentation for this theme, on https://perstarke-webdev.de"
+  - title: "Introduction"
     url: /#section-1
     blank: false
-  - title: "Section 2"
+  - title: "Objectives"
     url: /#section-2
     blank: false
-  - title: "Section 3"
+  - title: "Methodology"
     url: /#section-3
     blank: false
-  - title: "Section 4"
+  - title: "Project Schedule"
     url: /#section-4
+    blank: false
+  - title: "Detailed Timeline"
+    url: /#detailed-timeline
     blank: false
